--- a/.github/workflows/kotlin-tests.yml
+++ b/.github/workflows/kotlin-tests.yml
@@ -8,13 +8,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup jdk Kotlin 23
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
 
       - name: Set up Kotlin
-      - uses: fwilhe2/setup-kotlin@main
+        uses: fwilhe2/setup-kotlin@main
         with:
           version: 2.1.10
 
